// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListHeader renders the All list title 1`] = `
<div>
  <h1
    className="title all"
  >
    All Foods
  </h1>
  <div
    className="actions"
  >
    <button
      className="action login"
      onClick={[Function]}
      type="button"
    >
      Log in
    </button>
    <form
      className="search"
      onSubmit={[Function]}
    >
      <label
        htmlFor="search"
      >
        Search
      </label>
      <input
        name="search"
        onChange={[Function]}
        placeholder="Search"
        type="search"
        value="test"
      />
      <input
        type="submit"
        value="Search"
      />
    </form>
  </div>
</div>
`;

exports[`ListHeader renders the Very High list title 1`] = `
<div>
  <h1
    className="title very-high"
  >
    Very High Oxalates
  </h1>
  <div
    className="actions"
  >
    <button
      className="action login"
      onClick={[Function]}
      type="button"
    >
      Log in
    </button>
    <form
      className="search"
      onSubmit={[Function]}
    >
      <label
        htmlFor="search"
      >
        Search
      </label>
      <input
        name="search"
        onChange={[Function]}
        placeholder="Search"
        type="search"
        value="test"
      />
      <input
        type="submit"
        value="Search"
      />
    </form>
  </div>
</div>
`;
